--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+tauri-plugin-clipboard-manager = "2.2.0"
+windows = { version = "0.58.0", features = ["Win32_System_DataExchange"] }
+sled = "0.34.7"
+chrono = { version = "0.4.39", features = ["serde"] }
+bincode = "1.3.3"
+tokio = "1.42.0"
