--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prettier": "3.4.2",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
