--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,4 @@ sled = "0.34.7"
 chrono = { version = "0.4.39", features = ["serde"] }
 bincode = "1.3.3"
 tokio = "1.42.0"
+uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
