--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,9 +23,11 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-clipboard-manager = "2.2.0"
-windows = { version = "0.58.0", features = ["Win32_System_DataExchange"] }
+windows = { version = "0.58.0", features = ["Win32_System_DataExchange", "Win32_UI_Input_KeyboardAndMouse"] }
 sled = "0.34.7"
 chrono = { version = "0.4.39", features = ["serde"] }
 bincode = "1.3.3"
 tokio = "1.42.0"
 uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2"
